Fix App root element vertical sizing
App root element was previously set to 100vh. The issue with vh is that
it doesn't take scrollbars into account, i.e. the available real estate
might be less.  Though we assume there's no scrollbars, if there are odd
effects are observed.

--- a/app/client/styles.css
+++ b/app/client/styles.css
@@ -18,7 +18,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    height: 100vh;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
 .top-pane {
